log
Wed 24 Apr 2024 06:24:17 PM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:25: error: expected expression before ‘)’ token
   55 |   HashMap *mapa = (mapa*) malloc(sizeof(Pair) * capacity);
      |                         ^
hashmap.c:57:17: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   57 |   mapa->current = NULL;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
7d7e250
Wed 24 Apr 2024 06:24:30 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:25: error: expected expression before ‘)’ token
   55 |   HashMap *mapa = (mapa*) malloc(sizeof(Pair) * capacity);
      |                         ^
Compilation failed
4d84135
